<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageWeather"
            android:layout_width="55dp"
            android:layout_height="61dp"
            android:layout_marginStart="193dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="194dp"
            android:layout_marginBottom="671dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/clear_day" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="151dp"
            android:layout_marginBottom="120dp"
            android:text="@string/label_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="142dp" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="169dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/value_latitude"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="129dp" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_longitude"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="198dp" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/value_longitude"
            tools:layout_editor_absoluteX="216dp"
            tools:layout_editor_absoluteY="193dp" />

        <TextView
            android:id="@+id/textViewSeaLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sea_level_pressure"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="258dp" />

        <TextView
            android:id="@+id/textViewSeaLevelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_sea_level_pressure"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="266dp" />

        <TextView
            android:id="@+id/textViewWindDirectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_wind_direction"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="312dp" />

        <TextView
            android:id="@+id/textViewWindDirectionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_wind_direction"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="316dp" />

        <TextView
            android:id="@+id/textViewWindSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_wind_speed"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="360dp" />

        <TextView
            android:id="@+id/textViewWindSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_wind_speed"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="367dp" />

        <TextView
            android:id="@+id/textViewTemperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temperature"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="421dp" />

        <TextView
            android:id="@+id/textViewTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_temperature"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="423dp" />

        <TextView
            android:id="@+id/textViewTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="471dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_time"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="471dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>